# rust_marc_experimentation_code

./: .gitignore  README.md
exp01_list_marc_files/: Cargo.toml
exp01_list_marc_files/src/: main.rs
exp02_read_marc_file/: Cargo.toml
exp02_read_marc_file/source_files/: sierra_export_1939.mrc
exp02_read_marc_file/src/: main.rs
exp02b_read_marcxml_file/: Cargo.toml  subproject_readme.md
exp02b_read_marcxml_file/archives/: main_async_process_records.rs  main_simple_single_threaded.rs
exp02b_read_marcxml_file/src/: main.rs
exp03_read_sub_field/: Cargo.toml
exp03_read_sub_field/src/: main.rs
exp04_subfields_refactored/: Cargo.toml
exp04_subfields_refactored/src/: main.rs
exp05_multifile/: Cargo.toml
exp05_multifile/src/: main.rs
exp06_timers/: Cargo.toml
exp06_timers/src/: main.rs
exp07_to_file/: Cargo.toml  output.txt
exp07_to_file/source_files/: sierra_export_0726.mrc
exp07_to_file/src/: main.rs
exp08_async/: Cargo.toml
exp08_async/src/: main.rs
exp08b_async_troubleshoot/: Cargo.toml
exp08b_async_troubleshoot/src/: main.rs
pytry/: marc_read.py  marc_read_01.py  marc_read_02_output_to_file.py
