[package]
name = "exp02b_read_marcxml_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
marc = "3.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
simple_logger = "4.1.0"
tokio = { version = "1.28.1", features = ["full"] }

rayon = "1.7.0"