[package]
name = "exp08b_async_troubleshoot"
version = "0.1.0"
authors = ["birkin <birkin.diana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
marc = "1.5.0"
tokio = { version = "0.2.21", features = ["full"] }
